# fdroid-build

./: .gitignore  CHANGELOG.md  README.md  build.cfg  fdroid-build.cabal  flake.nix  t.toml
.github/workflows/: build-minecraft.yml  build-moegirl.yml  build-zhwiki.yml  check-updates-minecraft.yml  check-updates-moegirl.yml  check-updates-zhwiki.yml  ci.yaml  deploy.yaml  run.yaml  update-repo.yml
app/: Build.hs  Config.hs  Core.hs  Deploy.hs  Download.hs  FDroidVersion.hs  GitCommitTime.hs  Main.hs  Nvchecker.hs  Packages.hs  ShakeExtras.hs  Sign.hs  Singing.hs  Types.hs
data/: sign-apk.sh
nix/: default.nix
scripts/: build-minecraft.sh  build-moegirl.sh  build-zhwiki.sh  sign-apk.sh
