cabal-version:   3.0
name:            fdroid-build
version:         0.1.0.0
license:         LGPL-2.1-or-later
license-file:    LICENSE
author:          berberman
maintainer:      berberman@yandex.com
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-dir:        data
data-files:      sign-apk.sh

common warnings
  ghc-options: -Wall

executable fdroid-build
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Build
    Config
    Core
    Download
    FDroidVersion
    Nvchecker
    Paths_fdroid_build
    ShakeExtras
    Types

  autogen-modules:  Paths_fdroid_build
  build-depends:
    , aeson
    , base                  ^>=4.18.2.1
    , binary-instances
    , bytestring
    , extra
    , shake
    , text
    , transformers
    , unordered-containers
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010
